--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "react-icons": "^5.5.0"
   }
 }
