--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.15.6"
+    "multer": "^1.4.5-lts.2",
+    "pg": "^8.15.6",
+    "react-icons": "^5.5.0"
   }
 }
